[gd_scene load_steps=6 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://OpenDyslexic-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://InputSet.gd" type="Script" id=3]
[ext_resource path="res://spiral.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
use_filter = true
font_data = ExtResource( 2 )

[node name="Control" type="Control" groups=["Input"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -500.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="HSeparator" type="HSeparator" parent="."]
anchor_right = 1.0
margin_bottom = 4.0

[node name="InputSet" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="Margin" type="Panel" parent="InputSet"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 20.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 5 )
size_flags_horizontal = 0

[node name="TagVBoxContainer" type="VBoxContainer" parent="InputSet"]
margin_left = 24.0
margin_right = 62.0
margin_bottom = 100.0

[node name="Tag" type="Label" parent="InputSet/TagVBoxContainer"]
margin_right = 38.0
margin_bottom = 48.0
size_flags_vertical = 7
text = "1. "
valign = 1

[node name="TextureRect" type="TextureRect" parent="InputSet/TagVBoxContainer"]
margin_top = 52.0
margin_right = 38.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
stretch_mode = 3

[node name="Question" type="Label" parent="InputSet"]
margin_left = 66.0
margin_right = 466.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 0 )
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "I leave or move on to another section when i smell a strong odor in a store"
valign = 1
autowrap = true

[node name="Value" type="Label" parent="InputSet"]
margin_left = 470.0
margin_top = 29.0
margin_right = 485.0
margin_bottom = 70.0
text = "0"
align = 1
valign = 1

[node name="VSeparator" type="VSeparator" parent="InputSet"]
margin_left = 489.0
margin_right = 493.0
margin_bottom = 100.0

[node name="ScoreVBoxContainer" type="VBoxContainer" parent="InputSet"]
margin_left = 497.0
margin_right = 1000.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScoreLabel" type="Label" parent="InputSet/ScoreVBoxContainer"]
margin_right = 503.0
margin_bottom = 48.0
size_flags_horizontal = 13
size_flags_vertical = 15
align = 1
valign = 2

[node name="HSlider" type="HSlider" parent="InputSet/ScoreVBoxContainer"]
margin_top = 52.0
margin_right = 503.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 1.0
max_value = 5.0
value = 1.0
rounded = true
allow_lesser = true
tick_count = 5
ticks_on_borders = true

[node name="Margin2" type="Panel" parent="InputSet"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 100.0
rect_min_size = Vector2( 20, 5 )
size_flags_horizontal = 0

[connection signal="focus_entered" from="InputSet/ScoreVBoxContainer/HSlider" to="." method="_on_HSlider_focus_entered"]
[connection signal="value_changed" from="InputSet/ScoreVBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
